objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Buying_Group_Member__c</fullName>
        <label>Buying_Group Member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ace Canada</fullName>
                </value>
                <value>
                    <fullName>BrandSource</fullName>
                </value>
                <value>
                    <fullName>Cantrex</fullName>
                </value>
                <value>
                    <fullName>Do-It-Best</fullName>
                </value>
                <value>
                    <fullName>Emery Jensen</fullName>
                </value>
                <value>
                    <fullName>Home Hardware</fullName>
                </value>
                <value>
                    <fullName>Loblaws</fullName>
                </value>
                <value>
                    <fullName>Mid States</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Orgil</fullName>
                </value>
                <value>
                    <fullName>Rona Canada</fullName>
                </value>
                <value>
                    <fullName>True Value</fullName>
                </value>
                <value>
                    <fullName>United Hardware</fullName>
                </value>
                <value>
                    <fullName>Wheat Belt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Period__c</fullName>
        <label>Rebate_Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_End_Date__c</fullName>
        <label>Submission_ End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Start_Date__c</fullName>
        <label>Submission_ Start_Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Dealer_Rebate</fullName>
        <active>true</active>
        <label>Dealer Rebate</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>